# CompSyRobotics

./: .gitignore  NumpyRobotics.py  main2.ipynb  notes.md  pyproject.toml  recovery_codes.txt  setup.py  test.py  token_for_password.txt
CompSyRobotics/: SympyRobotics.py  __init__.py
CompSyRobotics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/compsyrobotics/: __init__.py  compsyrobotics.py
